--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,12 @@
-version: "3.5"
+version: "3.9"
 
 services:
-
     prometheus:
         image: prom/prometheus
         container_name: prometheus
         volumes:
             - ./prometheus/:/etc/prometheus/
-            - prometheus_data:/prometheus
+            - ./prometheus_data:/prometheus
         command:
             - '--config.file=/etc/prometheus/prometheus.yml'
             - '--storage.tsdb.path=/prometheus'
@@ -46,11 +45,14 @@ services:
         networks:
             - metrics
         volumes:
-            - ./grafana/:/etc/grafana/provisioning/
+            - ./grafana/config.ini:/etc/grafana/config.ini
+            - ./grafana/provisioning/:/etc/grafana/provisioning/
+        command: >
+            --config /etc/grafana/config.ini
 
 networks:
     metrics:
-        driver: bridge
+        name: nethermind-metrics
 
 volumes:
     prometheus_data: {}
