feat!: change default interface to localhost

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,58 +1,55 @@
-version: "3.9"
-
 services:
-    prometheus:
-        image: prom/prometheus
-        container_name: prometheus
-        volumes:
-            - ./prometheus/:/etc/prometheus/
-            - ./prometheus_data:/prometheus
-        command:
-            - '--config.file=/etc/prometheus/prometheus.yml'
-            - '--storage.tsdb.path=/prometheus'
-            - '--web.console.libraries=/etc/prometheus/console_libraries'
-            - '--web.console.templates=/etc/prometheus/consoles'
-            - '--storage.tsdb.retention=200h'
-            - '--web.enable-lifecycle'
-        restart: unless-stopped
-        expose:
-            - 9090
-        ports:
-            - "9090:9090"
-        networks:
-            - metrics
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    volumes:
+      - ./prometheus/:/etc/prometheus/
+      - ./prometheus_data:/prometheus
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--storage.tsdb.path=/prometheus"
+      - "--web.console.libraries=/etc/prometheus/console_libraries"
+      - "--web.console.templates=/etc/prometheus/consoles"
+      - "--storage.tsdb.retention=200h"
+      - "--web.enable-lifecycle"
+    restart: unless-stopped
+    expose:
+      - 9090
+    ports:
+      - "${NETHERMIND_PROMETHEUS_HOST-127.0.0.1}:9090:9090"
+    networks:
+      - metrics
 
+  pushgateway:
+    image: prom/pushgateway
+    container_name: pushgateway
+    restart: unless-stopped
+    expose:
+      - 9091
+    ports:
+      - "${NETHERMIND_PUSHGATEWAY_HOST-127.0.0.1}:9091:9091"
+    networks:
+      - metrics
 
-    pushgateway:
-        image: prom/pushgateway
-        container_name: pushgateway
-        restart: unless-stopped
-        expose:
-            - 9091
-        ports:
-            - "9091:9091"
-        networks:
-            - metrics
-
-    grafana:
-        image: grafana/grafana
-        container_name: grafana
-        restart: unless-stopped
-        expose:
-            - 3000
-        ports:
-            - "3000:3000"
-        networks:
-            - metrics
-        volumes:
-            - ./grafana/config.ini:/etc/grafana/config.ini
-            - ./grafana/provisioning/:/etc/grafana/provisioning/
-        command: >
-            --config /etc/grafana/config.ini
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    restart: unless-stopped
+    expose:
+      - 3000
+    ports:
+      - "${NETHERMIND_GRAFANA_HOST-127.0.0.1}:3000:3000"
+    networks:
+      - metrics
+    volumes:
+      - ./grafana/config.ini:/etc/grafana/config.ini
+      - ./grafana/provisioning/:/etc/grafana/provisioning/
+    command: >
+      --config /etc/grafana/config.ini
 
 networks:
-    metrics:
-        name: nethermind-metrics
+  metrics:
+    name: nethermind-metrics
 
 volumes:
-    prometheus_data: {}
+  prometheus_data: {}
