ci: use github access token

--- a/.github/workflows/update-dashboard.yml
+++ b/.github/workflows/update-dashboard.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
+          token: ${{ secrets.REPOSITORY_DISPATCH_TOKEN }}
           title: "feat: update nethermind dashboard"
           commit-message: "feat: update nethermind dashboard"
           branch: chore/dashboard-update
